--- a/index.html
+++ b/index.html
@@ -18,10 +18,22 @@
     <h2>🛒 Carrito</h2>
     <ul id="cart" class="cart-list"></ul>
     <button onclick="mostrarPopup()">Realizar Pago</button>
-    <div id="popup">
+      
+    <div id="overlay" style="
+    display:none;
+    position: fixed;
+    top: 0; left: 0;
+    width: 100vw;
+    height: 100vh;
+    background: rgba(0,0,0,0.5);
+    z-index: 999;
+    "></div>
+
+  <div id="popup" style="display:none; position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); background: white; padding: 20px; border-radius: 8px; z-index: 1000;">
       <button id="btn-cerrar" onclick="cerrarPopup()">Cerrar</button>    
       <div id="pp-button"></div>
   </div>
+
   </main>
 
   <script src="script.js"></script>
