--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Catálogo de Productos</title>
   <link rel="stylesheet" href="styles.css" />
-  <link rel="stylesheet" href="https://cdn.payphonetodoesposible.com/box/v1.1/payphone-payment-box.css"> 
-  <script type="module" src="https://cdn.payphonetodoesposible.com/box/v1.1/payphone-payment-box.js"></script> 
+ <!-- Versión SANDBOX -->
+  <link rel="stylesheet" href="https://cdn.sandbox.payphone.com/box/v1.1/payphone-payment-box.css"> 
+  <script type="module" src="https://cdn.sandbox.payphone.com/box/v1.1/payphone-payment-box.js"></script>  
 </head>
 <body>
   <header>
