--- a/index.html
+++ b/index.html
@@ -76,11 +76,18 @@
               clientTransactionId: clientTransactionID,
               backgroundColor: "#6610f2",
                onComplete: function (transactionResult) {
-                console.log("✅ Pago completado", transactionResult);
+                console.log("✅ Resultado:", transactionResult);
+
+                if (transactionResult.status !== "APPROVED") {
+                  alert("El pago no fue aprobado.");
+                  cerrarPopup();
+                  return;
+                }
+
                 const id = transactionResult.transactionId;
                 const clientTx = transactionResult.clientTransactionId;
 
-                // redirigir
+                // Redirigir si es válido
                 window.location.href = `/confirmacion?id=${id}&clientTransactionId=${clientTx}`;
               }
           }).render('pp-button');
