--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div id="product-list" class="product-container"></div>
     <h2>🛒 Carrito</h2>
     <ul id="cart" class="cart-list"></ul>
-    <button onclick="mostrarPopup()">Realizar Pago</button>
+    <button class="btn-pagar" onclick="mostrarPopup()">Realizar Pago</button>
       
     <div id="overlay" style="
     display:none;
