--- a/index.html
+++ b/index.html
@@ -60,19 +60,17 @@
       }
 
       function ejecutarCajitaPagos() {
-           // Calcular subtotal sin IVA
-          const amountWithoutTax = cart.reduce((sum, item) => sum + item.price, 0);
+           const subtotal = cart.reduce((sum, item) => sum + item.price, 0);
 
-          // Calcular el IVA del 12%
-          const taxRate = 0.12;
-          const tax = amountWithoutTax * taxRate;
+            const subtotalRounded = parseFloat(subtotal.toFixed(2));
+            const taxRate = 0.12;
+            const tax = parseFloat((subtotalRounded * taxRate).toFixed(2));
+            const total = parseFloat((subtotalRounded + tax).toFixed(2));
 
-          // Total a cobrar
-          const total = amountWithoutTax + tax;
-          // Redondear todo a centavos
-          const amountWithoutTaxCents = Math.round(amountWithoutTax * 100);
-          const taxCents = Math.round(tax * 100);
-          const totalCents = amountWithoutTaxCents + taxCents;
+            const amountWithoutTaxCents = Math.round(subtotalRounded * 100);
+            const taxCents = Math.round(tax * 100);
+            const totalCents = Math.round(total * 100); // Esto asegura consistencia
+
 
           const clientTransactionID = 'ID-' + Date.now() + '-' + Math.floor(Math.random() * 1000); // Generar un ID único para la transacción
           const ppb  = new PPaymentButtonBox({                            
