--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
           const ppb  = new PPaymentButtonBox({                            
               //token obtenido desde la consola de developer
               token: 'wrPUSQfjR-GCEFuaIWVGK4wvBycFljhVQTyO8q1i56c7GnoBXh6tosgP5cQxR0Xx5VA4pbb-xb12qVFnkTcR54MR3zx-u16Qf7WKf64We9j-SNXcsCGLICgwiI2bhfurKCtLL2p-XiL8Tx1lxXNou5Tool60cznwFLN57zFBTLgEz5a3nm7wvtakueGM1zqg9Ygs5HuJlmUIY51tfpVgf_gxmAyQvhwi4qfQ8o2XZkmGhlN8bdfM_rpVmjk006JdiehQphBPScuzRHZQYrrnBxfUbZyoaUFrZkicIhtryaDdntIEFuYc8rjHK0vbmZGh7ExJCyBW5EGQiv5QkDCTmhQVXis',                                    
-              amount: totalCents,
-              amountWithoutTax: subtotalCents,
-              amountWithTax: 0,
-              tax: taxCents,                                        
+              amount: 315,
+              amountWithoutTax: 200,
+              amountWithTax: 100,
+              tax: 15,                                        
               service: 0,
               tip:0,
               storeId:"b10d8497-9cea-45db-b1ab-e212aa6c1e07", 
