--- a/index.html
+++ b/index.html
@@ -60,6 +60,11 @@
       }
 
       function ejecutarCajitaPagos() {
+
+          if (cart.length === 0) {
+          alert("El carrito está vacío.");
+          return;
+          }
           const subtotalCents = cart.reduce((sum, item) => sum + Math.round(item.price * 100), 0);
           const taxRate = 0.12;
           const taxCents = Math.round(subtotalCents * taxRate);
